--- a/Scarb.toml
+++ b/Scarb.toml
@@ -13,11 +13,20 @@ move = "./scripts/move.sh"
 
 [dependencies]
 dojo = { path = "/Users/nasr/Documents/development.nosync/dojo/crates/dojo-core" }
+origami_token = { git = "https://github.com/Larkooo/origami" }
 
 [[target.dojo]]
 
 [tool.dojo]
-initializer_class_hash = "0xbeef"
+
+build-external-contracts = [
+    "origami_token::components::security::initializable::initializable_model",
+    "origami_token::components::token::erc20::erc20_metadata::erc_20_metadata_model",
+    "origami_token::components::token::erc20::erc20_balance::erc_20_balance_model",
+    "origami_token::components::token::erc20::erc20_allowance::erc_20_allowance_model",
+    "origami_token::components::token::erc20::erc20_mintable::erc_20_mintable_model",
+    "origami_token::components::token::erc20::erc20_burnable::erc_20_burnable_model",
+]
 
 [profile.dev]
 [profile.sepolia]
