--- a/overlays/sepolia/flip.toml
+++ b/overlays/sepolia/flip.toml
@@ -1,7 +1,5 @@
-tag = "flippyflop-actions"
+tag = "flippyflop-Flip"
 writes = [
-    "flippyflop-Tile",
-    "flippyflop-Game",
     "flippyflop-ERC20MetadataModel",
     "flippyflop-ERC20BalanceModel",
     "flippyflop-ERC20AllowanceModel",
