--- a/overlays/sepolia/actions.toml
+++ b/overlays/sepolia/actions.toml
@@ -2,6 +2,7 @@ tag = "flippyflop-actions"
 writes = [
     "flippyflop-Tile",
     "flippyflop-Game",
+    "flippyflop-Claim",
     "flippyflop-ERC20MetadataModel",
     "flippyflop-ERC20BalanceModel",
     "flippyflop-ERC20AllowanceModel",
